--- a/data.yaml
+++ b/data.yaml
@@ -264,9 +264,9 @@ language:
       value: 201811
     gcc:
     - since: C++20
-      value: 201811
+      value: 202207
     - option: -fchar8_t
-      value: 201811
+      value: 202207
     msvc:
     - since: C++20
       value: 201811
@@ -724,7 +724,9 @@ language:
     clang:
     - since: C++23
       value: 202011
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202207
     msvc: null
 - name: __cpp_inheriting_constructors
   rows:
@@ -1100,7 +1102,9 @@ language:
     cppreference-description: '{{tt|static}} {{ltt|cpp/language/operators|operator()}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202207
     msvc: null
 - name: __cpp_structured_bindings
   rows:
