libstdc++ defines __cpp_lib_constexpr_charconv

--- a/data.yaml
+++ b/data.yaml
@@ -1902,7 +1902,9 @@ library:
       and {{lc|std::from_chars}} for integral types
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202202
     msvc:
     - since: C++23
       value: 202207
