--- a/data.yaml
+++ b/data.yaml
@@ -3373,7 +3373,10 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - since: C++23
+      depends: defined(__cpp_lib_concepts)
+      value: 202207
 - name: __cpp_lib_ranges_iota
   header_list: numeric
   rows:
