--- a/data.yaml
+++ b/data.yaml
@@ -2662,7 +2662,9 @@ library:
     gcc:
     - since: C++23
       value: 202207
-    msvc: null
+    msvc:
+    - since: C++23
+      value: 202207
 - name: __cpp_lib_is_aggregate
   header_list: type_traits
   rows:
