libstdc++ defines __cpp_lib_atomic_lock_free_type_aliases

--- a/data.yaml
+++ b/data.yaml
@@ -1506,7 +1506,9 @@ library:
     clang:
     - since: C++20
       value: 201907
-    gcc: null
+    gcc:
+    - since: C++20
+      value: 201907
     msvc:
     - since: C++20
       value: 201907
