MSVC STL defines __cpp_lib_ranges_as_const

--- a/data.yaml
+++ b/data.yaml
@@ -3311,7 +3311,10 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - since: C++23
+      depends: defined(__cpp_lib_concepts)
+      value: 202207
 - name: __cpp_lib_ranges_as_rvalue
   header_list: ranges
   rows:
