--- a/data.yaml
+++ b/data.yaml
@@ -3096,7 +3096,10 @@ library:
     clang:
     - since: C++20
       value: 202207
-    gcc: null
+    gcc:
+    - since: C++20
+      depends: __cpp_lib_concepts
+      value: 202207
     msvc:
     - since: C++20
       depends: defined(__cpp_lib_concepts)
