--- a/data.yaml
+++ b/data.yaml
@@ -2398,7 +2398,9 @@ library:
       clarify handling of encodings in localized formatting of chrono types
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++20
+      value: 202106
     msvc:
     - since: C++20
       depends: defined(__cpp_lib_concepts)
